Add localhost user authentication for requests from localhost
- update LocalAdminService to use existing service code since localhost user has needed permissions
- when creating user with certificate content, certificate is uploaded not just manually created